# guru

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  users.json
.github/workflows/: main_workflow.yml  release.yml
app/: main.py
app/common/: repository.py
app/models/: users.py
app/repositories/: users_repository.py
app/routers/: health.py  users_routers.py
app/schemas/: users.py
configs/: config.py  config.yaml  settings.py
configs/loader/: configs.py  pytest_plugins.py
fixtures/common/: fake.py  settings.py
fixtures/guru/: api_client.py  users.py
src/: client.py  database.py  main.py
src/models/: users.py
src/repositories/: users_repository.py
src/routers/: health.py  users_routers.py
src/schemas/: app.py  users.py
tests/: conftest.py
tests/fixtures/: config.py  users.py
tests/users/: test_create_user.py  test_delete_users.py  test_get_users.py  test_smoke.py  test_update_users.py  test_user_api_avalible.py  test_users.py
